# MelodyTransposer

./: .gitignore  .replit  README.md  current_state.md  database.py  init_db.py  main.py  models.py  project_state.md  pyproject.toml  replit.nix
.streamlit/: config.toml
assets/: app.css
utils/: audio_processor.py  music_processor.py
